--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  padding: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.blind {
+  position: absolute;
+  text-indent: -9999px;
+}
+
+.calendar-view {
+  padding: 10px 0 0;
+}
+
+.calendar-view .calendar-header .ant-card-body {
+  display: none;
+}
+
+.calendar-view .calendar-date .is-dimmed .ant-card-head-title,
+.calendar-view .calendar-date .is-dimmed .ant-card-body {
+  color: rgba(0, 0, 0, 0.25);
+}
+
+.temp-card .ant-card-body {
+  min-height: calc(24 * 5px);
 }
