--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-.App {
-  padding: 20px;
-}
 
 .blind {
   position: absolute;
@@ -20,16 +17,20 @@
   color: rgba(0, 0, 0, 0.25);
 }
 
-.temp-card .ant-card-body {
+.calendar-date__event .ant-card-body {
   min-height: calc(24 * 5px);
   padding: 2px;
 }
 
-.temp-today .ant-card {
+.calendar-date .calendar-date__event:hover {
+  background-color: rgba(0, 0, 0, 0.02);
+}
+
+.is-today .ant-card {
   background: #e6f7ff;
 }
 
-.temp-event {
+.calendar-event {
   height: 24px;
   line-height: 24px;
   border-radius: 2px;
@@ -41,8 +42,5 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.calendar-date .temp-card:hover {
-  background-color: rgba(0, 0, 0, 0.02);
+  cursor: pointer;
 }
