--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
   background: #e6f7ff;
 }
 
+/* event 일정 */
 .calendar-event {
   height: 24px;
   line-height: 24px;
@@ -50,6 +51,7 @@
   cursor: pointer;
 }
 
+/* 주 - event 일정 */
 .calendar-week .calendar-event {
   height: 100%;
   position: absolute;
@@ -58,6 +60,7 @@
   padding: 2px;
 }
 
+/* 주 - 현재시간 */
 .current-time {
   position: absolute;
   height: 24px;
